syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb";

package loop;

import "google/protobuf/empty.proto";

service ErrorLog {
    rpc SaveError(SaveErrorRequest) returns (google.protobuf.Empty) {}
  }
  
  // SaveErrorRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/loop.ErrorLog.SaveErrorRequest].
  message SaveErrorRequest {
    string message = 1;
  }
  